# pykinect2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  setup.py
examples/: all.py  basics.py  cpu_pipeline.py  depth_only.py  rgb_only.py
src/: CMakeLists.txt  kinect2.cc  kinect2.h  kinect2.i  kinect2_file_logger.h
test/: test_kinect2.py
